Fix z-index of semantic-ui popup

--- a/src/components/viewer/Viewer.scss
+++ b/src/components/viewer/Viewer.scss
@@ -1,3 +1,4 @@
+@import 'css/common/vars/scope';
 @import "css/common/vars/sizes";
 @import "css/common/vars/colors";
 @import "css/common/vars/fonts";
@@ -20,6 +21,10 @@ $viewer-font-size: 14px;
 .self-offset {
   // just for purpose of identification
   border: 0;
+}
+
+.popup:global(#{$pp-scope}.ui.popup) {
+  z-index: $viewer-z-index + 1;
 }
 
 ul.annotation-items {
